--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -55,7 +55,7 @@
   .vector-image {
     max-width: 60vw;
     margin-bottom: 3vh;
-    margin-top: -3vh;
+    margin-top: -1vh;
   }
 
   .divider {
